--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -1,4 +1,17 @@
 .marketerList {
   display: flex;
+  width: 100vh;
   flex-direction: row;
+  justify-content: space-between;
+}
+
+.listItem {
+  display: flex;
+  flex-direction: column;
+  width: 150px;
+  height: 250px;
+  /* align-items: center; */
+  /* justify-content: space-around; */
+  /* padding: 10px; */
+  border: 1px solid gray;
 }
