--- a/src/pages/Main/Main.css
+++ b/src/pages/Main/Main.css
@@ -1,16 +1,10 @@
 .main {
   display: flex;
-  height: 95vh;
+  /* height: 90vh; */
   flex-direction: column;
   text-align: center;
   align-items: center;
   /* justify-content: center; */
-}
-
-.header {
-  display: block;
-  text-align: center;
-  background-color: gray;
 }
 
 .main_banner {
@@ -37,4 +31,8 @@
   display: block;
   text-align: center;
   background-color: gray;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
 }
