--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -1,6 +1,7 @@
 .marketerList {
   display: flex;
-  width: 100vh;
+  width: 100vw;
+  max-width: 1170px;
   flex-direction: row;
   justify-content: space-between;
 }
@@ -19,9 +20,16 @@
 .header {
   display: flex;
   background-color: #f8f8f8;
-  width: 100vh;
+  width: 100vw;
+  max-width: 1170px;
   height: 80px;
   margin: auto;
   justify-content: space-between;
   align-items: center;
+}
+
+.footer {
+  display: block;
+  text-align: center;
+  background-color: gray;
 }
