Add baseURL.js (../src/baseURL.js) Fixed  Layout Combine Fixed state data flow Fixed Main Page / Ant Design Add Slide Banner in Main Page Fixed CSS Fixed 404 Page Fixed Header Component

--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -20,17 +20,17 @@
 .header {
   display: flex;
   flex-direction: row;
-  width: 100%;
-  max-width: 1170px;
-  /* height: 80px; */
+  /* width: 100%; */
+  /* max-width: 1170px; */
+  height: 70px;
   margin: 0;
   justify-content: space-between;
   align-items: center;
   background-image: url("./header.png");
 }
 
-.footer {
+/* .footer {
   display: block;
   text-align: center;
   background-color: gray;
-}
+} */
