--- a/src/pages/Mypage/Mypage.css
+++ b/src/pages/Mypage/Mypage.css
@@ -8,7 +8,7 @@
 .sider-wrapper {
   width: 25vw;
   background-color: #fff;
-  border: 1px solid black;
+  border: 1px solid #e8e8e8;
 }
 
 .user-wrapper {
@@ -48,7 +48,7 @@
   display: flex;
   padding: 0;
   min-height: 280px;
-  border: 1px solid black;
+  border: 1px solid #e8e8e8;
   margin-left: 30px;
   align-items: center;
   justify-content: center;
