--- a/src/pages/MyClassroom/Classroom.css
+++ b/src/pages/MyClassroom/Classroom.css
@@ -1,9 +1,9 @@
-.layout {
+/* .layout {
   height: 100%;
   max-width: 1170px;
   margin: auto;
   background-color: #fff;
-}
+} */
 
 .sider-wrapper {
   width: 25vw;
