--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -4,17 +4,18 @@
   max-width: 1170px;
   flex-direction: row;
   justify-content: space-between;
+  margin-bottom: 30px;
 }
 
 .listItem {
   display: flex;
   flex-direction: column;
-  width: 150px;
-  height: 250px;
+  width: 170px;
+  height: 260px;
   /* align-items: center; */
   /* justify-content: space-around; */
   /* padding: 10px; */
-  border: 1px solid gray;
+  border: 1px solid #e8e8e8;
 }
 
 .header {
