--- a/src/pages/Oauth/Signin/SigninForm.css
+++ b/src/pages/Oauth/Signin/SigninForm.css
@@ -1,6 +1,17 @@
-.login-form {
-  max-width: 300px;
+.login-form-container {
+  max-width: 500px;
   margin: 0px auto;
+  margin-top: 15vh;
+  padding: 80px 100px;
+  border: 0.5px solid #dddddd;
+  border-radius: 5px;
+
+}
+.title {
+  font-size: 20px;
+  font-weight: 600;
+  text-align: center;
+  margin-bottom: 20px;
 }
 .login-form-forgot {
   float: right;
@@ -8,7 +19,6 @@
 .login-form-button {
   width: 100%;
 }
-
 .extra-function-button-wrapper {
   display: flex;
   justify-content: space-between;
