--- a/src/pages/Oauth/Signup/SignupForm.css
+++ b/src/pages/Oauth/Signup/SignupForm.css
@@ -3,7 +3,9 @@
   flex-direction: column;
   justify-content: center;
   max-width: 500px;
+  min-width: 300px;
   margin: 0px auto;
+  margin-top: 5vh;
   padding: 24px 100px;
   border: 0.5px solid #dddddd;
   border-radius: 5px;
@@ -27,7 +29,7 @@
   font-size: 20px;
   font-weight: 600;
   text-align: center;
-  margin-bottom: 12px;
+  margin-bottom: 20px;
 }
 
 .subtitle {
