--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -51,3 +51,10 @@
   align-items: center;
   justify-content: flex-end;
 }
+
+html {
+  -ms-overflow-style: none;
+}
+html::-webkit-scrollbar {
+  display: none;
+}
