--- a/src/pages/Mypage/Mypage.css
+++ b/src/pages/Mypage/Mypage.css
@@ -53,3 +53,17 @@
   align-items: center;
   justify-content: center;
 }
+.addMarketerTitle {
+  margin-top: 30px;
+  /* margin-left: 20px; */
+  margin-bottom: 40px;
+  padding-bottom: 6px;
+  font-weight: 400;
+  font-size: 16px;
+  width: 225px;
+  border-bottom: 1.5px solid black;
+}
+.selecter {
+  margin-left: 10px;
+  margin-bottom: 15px;
+}
